# llvm-extended-documentation

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  configure  configure.ac
DITA-OT1.8/: build.xml  catalog-dita.xml  relnotes.html
DITA-OT1.8/doc/: DITA-OTProjectHome.html  index.html  toctree.js  userguide.chm
DITA-OT1.8/doc/admin/: BugFixGuidelines-NoCLA.html  ContributionForm.html  ContributionPolicy.html  DITA-OTProjectGoals.html  DITA-OTProjectManagement.html  DevelopmentProcess.html  FixesAndFeatures.html  HowToParticipate.html  ProjectRoles.html  ReleaseLifeCycle.html
DITA-OT1.8/doc/articles/: DITA-dWarticles.html  dita-and-dita-ot-resources.html  web-based-resources.html
DITA-OT1.8/doc/dev_ref/: DITA-OTArchitecture.html  DITA-OTPreprocess.html  DITA1.2-implementation-dependent-features.html  OdtDefault.html  PdfDefault.html  XhtmlCHM.html  XhtmlCommon.html  XhtmlDefault.html  XhtmlEclipse.html  XhtmlJavahelp.html  XhtmlTocjs.html  XhtmlWithNavigation.html  ant-properties.html  configuring-the-dita-ot.html  developer-reference.html  extended-functionality.html  extending-the-ot.html  flagging-migration.html  lib-org.dita.dost.platform-plugin.properties.html  plugin-addgeneratedtext.html  plugin-antpreprocess.html  plugin-anttarget.html  plugin-configfile.html  plugin-dependencies.html  plugin-javalib.html  plugin-messages.html  plugin-newextensions.html  plugin-newtranstype.html  plugin-overridestyle.html  plugin-sample.html  plugin-support.html  plugin-xmlcatalog.html  plugin-xsltparams.html  plugins-installing.html  plugins-overview.html  plugins-removing.html  preprocess-chunk.html  preprocess-coderef.html  preprocess-conref.html  preprocess-conrefpush.html  (+14 more)
DITA-OT1.8/doc/quickstartguide/: exploring-the-dita-ot.html  rundemo.html  runmore.html
DITA-OT1.8/doc/readme/: AvailableTransforms.html  DITA-ant.html  DITA-antuse.html  DITA-globalization-pdf.html  DITA-globalization.html  DITA-installation.html  DITA-javacmd.html  DITA-log.html  DITA-messages.html  DITA-readme.html  DITA-tested.html  DITA-troubleshooting.html  accessing-help-from-the-cl-tool.html  ant-parameters-all-transformation-types.html  ant-parameters-common-html-transtypes.html  ant-parameters-eclipse-content-transformation.html  ant-parameters-eclipse-help-transformation.html  ant-parameters-html-help-transformation.html  ant-parameters-javahelp-transformation.html  ant-parameters-legacypdf-transformation.html  ant-parameters-odt-transformation.html  ant-parameters-other.html  ant-parameters-pdf2-transformation.html  ant-parameters-xhtml-transformation.html  ant.html  building-output-using-cl-tool.html  command-line-tool.html  configuration.html  creating-an-ant-build-script.html  determining-version-of-ditaot.html  distribution_packages.html  dita-ot_ant_properties.html  dita-ot_java_properties.html  dita2docbook.html  dita2eclipsecontent.html  dita2eclipsehelp.html  dita2htmlhelp.html  dita2javahelp.html  dita2legacypdf.html  dita2odt.html  (+27 more)
DITA-OT1.8/doc/readme/changes/: rel1.8.html
DITA-OT1.8/doc/specification/: DITA1-2.html
DITA-OT1.8/docsrc/: idditgui.opt  keyrefs.ditamap  userguidexhm.bom
DITA-OT1.8/docsrc/readme/: ant-parameters-all-transformation-types.dita  installing-full-easy.dita
DITA-OT1.8/docsrc/readme/changes/: rel1.8.xml
DITA-OT1.8/lib/: configuration.properties
DITA-OT1.8/lib/org.dita.dost.platform/: plugin.properties
DITA-OT1.8/plugins/org.dita.base/: build_init.xml
DITA-OT1.8/plugins/org.dita.odt/xsl/xslodt/: dita2odt-links.xsl
DITA-OT1.8/plugins/org.dita.pdf2/xsl/fo/: reference-elements.xsl
DITA-OT1.8/plugins/org.dita.xhtml/xsl/xslhtml/: dita2htmlImpl.xsl
llvm-assembler-manual/: Makefile.am  Makefile.in  c-aap.texi  custom.wordlist  llvm-assembler.info  llvm-assembler.texi
llvm-user-manual/: Makefile.am  Makefile.in  aclocal.m4  bugreport.texi  compat.texi  configure  contrib.texi  contribute.texi  extend.texi  frontends.texi  gnu.texi  implement-c.texi  implement-cxx.texi  invoke.texi  llvm.info  llvm.info-1  llvm.info-2  llvm.info-3  llvm.info-4  llvm.info-5  llvm.info-6  llvm.info-7  llvm.texi  md.texi  objc.texi  service.texi  standards.texi  tm.texi.in  trouble.texi
llvm-user-manual/include/: gcc-common.texi
local-fonts/: Makefile.am  Makefile.in  README.txt  fop.xconf.in
support-code/: cc1  dummy-asm.S  dummy-asm.c  dummy-asm.s  dummy-assert.c  dummy-blacklist.txt  dummy-dollar.c  dummy-error.c  dummy-macro.c  dummy-noassert.c  dummy-preproc.i  dummy-sample.prof  dummy.afdo  dummy.c  dummy.cpp  dummy.h  dummy.mm  libcode.c  myplugin.c  opt-check.sh  profile-assist.c  stack-protect-assist.c  todo.org  validate-opts.sh  wrapper.sh
