# Makefile.am -- Top level automake configuration file
#
# Copyright (C) 2015 Embecosm Limited
# Contributor Jeremy Bennett <jeremy.bennett@embecosm.com>
#
# This file is part of the LLVM extended documentation
#
# This file is distributed under the University of Illinois Open Source
# License. See COPYING for details.

# Local macros
ACLOCAL_AMFLAGS = -I m4

# Common flags for all programs
SUBDIRS = llvm-assembler-manual llvm-user-manual
